--- a/windowrules.conf
+++ b/windowrules.conf
@@ -62,3 +62,5 @@ windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
+# windowrule=windowdance,title:^(Rhythm Doctor)$
+# windowrule=forceinput,title:^(Rhythm Doctor)$ # May also be needed
