--- a/hyprland.conf
+++ b/hyprland.conf
@@ -65,8 +65,11 @@ env = MOZ_ENABLE_WAYLAND,1
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 
 input {
-    # kb_layout = us
+    kb_layout = us, bd
+    kb_variant = , probhat
+
     follow_mouse = 1
+    # float_switch_override_focus=0
 
     touchpad {
         natural_scroll = no
