--- a/keybindings.conf
+++ b/keybindings.conf
@@ -78,7 +78,8 @@ bind = $mainMod SHIFT, T, exec, pkill -x rofi || $scrPath/themeselect.sh # theme
 bind = $mainMod SHIFT, A, exec, pkill -x rofi || $scrPath/rofiselect.sh # rofi style select menu
 bind = $mainMod SHIFT, W, exec, pkill -x rofi || $scrPath/swwwallselect.sh # rofi wall select menu
 bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh c  # open Pasteboard in screen center
-bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # change keyboard layout
+# bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # change keyboard layout
+bind = SUPER, space, exec, hyprctl switchxkblayout by-tech-gaming-keyboard next
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
